--- a/m1/w1/d3/d3.html
+++ b/m1/w1/d3/d3.html
@@ -15,9 +15,9 @@
             <img class="logo" src="C:\Users\danut\Documents\Epicode esercizi\m1\w1\d3\logo.png" height="150px" width="450px">
             <hr id="linea">
             <span>part of</span><strong> A SIMPLY FABULOUS THANKSGIVING</strong>
-    </header>
-    <main>
-        <div class="container">
+</header>
+<main>
+     <div class="container">
             <h1>Focaccia with Caramelized Onions,Cranberies and Brie</h1>
             <h4>Aooo ma sta focaccia è bona e va molto bene per un aperitivo con i tuoi amici, senti che profumo e senti che sapore!</h4>
             <div class="box">
@@ -30,6 +30,7 @@
             <div class="sott">
             <div id="pre">FEATURED IN:</div>
             <a href="C:\Users\danut\Documents\Epicode esercizi\m1\w1\d3\focaccia.png">fresh cranberry recipes che è na schiccheria</a>
+            </div>
             <h3>Ingredients</h3>
             <hr>
             <div class="contenuto">
@@ -61,11 +62,10 @@
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
-        <hr id="conf">
-        <div class="fondo">Read more on <a href="https://laconfraternitadellapizza.forumfree.it/?f=10055608">simply recipes</a></div>
-        </footer>
-     
+</main>
+<footer>
+    <hr id="conf">
+    <div class="fondo">Read more on <a href="https://laconfraternitadellapizza.forumfree.it/?f=10055608">simply recipes</a></div>
+</footer>
 </body>
 </html>
