--- a/m1/w1/d4/d4.html
+++ b/m1/w1/d4/d4.html
@@ -92,22 +92,59 @@
                 Una volta raggiunto il nostro obiettivo sarete dei very machos.</span>
                 <hr id="spa">
                 <iframe src="https://www.youtube.com/embed/dvOvHXruEDM%22%3E"> </iframe>
+                <hr id="spa">
                 <div class="spaz">
                     <div class="nov">
-                     <p id="nov">novità</p>
+                     <h2>novità</h2>
                     </div>
                     <div class="iscri">
                         <strong>Vuoi rimanere aggiornato? registrati</strong>
                         <input type="text"><button type="button">Registrati</button>
                     </div>
-                </div>  
 
+                </div>
+                <hr id="spa">
+                <h2>ARTICOLI CORRELATI</h2>
+                <div class="spazi">
+                    <div class="novi">
+                    <p>Validitare codice html</p>
+                    <i class="fa-solid fa-pen"></i><span>Categoria develop</span>
+                    </div>
+                    <hr id="spa">
+                    <div class="be"><i class="fa-solid fa-star"></i><span>Data:10-9-2020</span>
+                    </div>
+                </div> 
+                <hr id="spa">
+                <div class="spazi">
+                    <div class="novi">
+                    <p>Correggere la sintassi</p>
+                    <i class="fa-solid fa-pen"></i><span>Categoria develop</span>
+                    </div>
+                    <hr id="spa">
+                    <div class="be"><i class="fa-solid fa-star"></i><span>Data:10-9-2020</span>
+                    </div>
+                </div> 
+                <hr id="spa">
+                <div class="spazi">
+                    <div class="novi">
+                    <p>Meno KB nella pagina</p>
+                    <i class="fa-solid fa-pen"></i><span>Categoria develop</span>
+                    </div>
+                    <hr id="spa">
+                    <div class="be"><i class="fa-solid fa-star"></i><span>Data:10-9-2020</span>
+                    </div>
+                </div> 
             </div>
-            
-
         </main>
         <footer>
-
+            <div class="footer">
+                <div class="fot">
+                <p>Meno KB nella pagina</p>
+                <i class="fa-solid fa-pen"></i><span>Categoria develop</span>
+                </div>
+                <hr id="spa">
+                <div class="be"><i class="fa-solid fa-star"></i><span>Data:10-9-2020</span>
+                </div>
         </footer>
     </div>
 </body>
