--- a/m1/w2/testw2/calco.html
+++ b/m1/w2/testw2/calco.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  
-  <h1 style="text-align:center">Calculator App</h1>
+  <h1 style="text-align:center">Calcolatrice in JS</h1>
   <div class="container">
     <br>
   <table>
@@ -21,22 +21,22 @@
     </tr>
   </table>
   <div class="keys">
+    <input type="button" value="1" class="button" onClick="display('1')"></input>
+    <input type="button" value="2" class="button" onClick="display('2')"></input>
+    <input type="button" value="3" class="button" onClick="display('3')"></input>
+    <input type="button" value="/" class="operator" onClick="display('/')"></input>
+    <input type="button" value="4" class="button" onClick="display('4')"></input>
+    <input type="button" value="5" class="button" onClick="display('5')"></input>
+    <input type="button" value="6" class="button" onClick="display('6')"></input>
+    <input type="button" value="*" class="operator" onClick="display('*')"></input>
     <input type="button" value="7" class="button" onClick="display('7')"></input>
-  <input type="button" value="8" class="button " onClick="display('8')"></input>
-  <input type="button" value="/" class="operator" onClick="display('/')"></input>
-  <input type="button" value="9" class="button" onClick="display('9')"></input>
-  <input type="button" value="4" class="button" onClick="display('4')"></input>
-  <input type="button" value="5" class="button" onClick="display('5')"></input>
-  <input type="button" value="6" class="button" onClick="display('6')"></input>
-  <input type="button" value="*" class="operator" onClick="display('*')"></input>
-  <input type="button" value="1" class="button" onClick="display('1')"></input>
-  <input type="button" value="2" class="button" onClick="display('2')"></input>
-  <input type="button" value="3" class="button" onClick="display('3')"></input>
-  <input type="button" value="0" class="button" onClick="display('0')"></input>
-  <input type="button" value="." class="button" onClick="display('.')"></input>
-  <input type="button" value="-" class="operator" onClick="display('-')"></input>
-  <input type="button" value="+" class="operator" onClick="display('+')"></input>
-  <input type="button" value= "=" class="button equal-sign" onClick="solve()"></input>
+    <input type="button" value="8" class="button " onClick="display('8')"></input>
+    <input type="button" value="9" class="button" onClick="display('9')"></input>
+    <input type="button" value="+" class="operator" onClick="display('+')"></input>
+    <input type="button" value="0" class="button" onClick="display('0')"></input>
+    <input type="button" value="." class="button" onClick="display('.')"></input>
+    <input type="button" value= "=" class="button equal-sign" onClick="solve()"></input>
+    <input type="button" value="-" class="operator" onClick="display('-')"></input>
 </div> 
 </div>
 
