--- a/m1/w1/d2/d2.html
+++ b/m1/w1/d2/d2.html
@@ -117,12 +117,7 @@
 </main>
 <footer>
     <hr>
-    <span>Blog Epicode &#169 2021</span>
-    <div class="contatti">
-        <p>+391234567890</p>
-        <p>Danutz-98@hotmail.it</p>
-    </div>
-</div>
+    <h3>Blog Epicode &#169 2021</h3>
 </footer>
  </div>
 </body>
