--- a/m1/w5/d2/articolo.html
+++ b/m1/w5/d2/articolo.html
@@ -9,22 +9,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/font-awesome.css">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/b097d62bd0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="font-awesome.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="top">
     <header>
         <div class="brand">
-            <img src="./assets/img/logo.svg" alt="logo del blog" width="250" height="60">
+            <img src="logo.svg" alt="logo del blog" width="250" height="60">
             <p>Epicode - Il blog dei developers</p>
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html" title="Home Page">Home</a></li>
-                <li><a href="./articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
-                <li><a href="./contatti.html" title="Candidati inviando un tuo cv">Job</a></li>
+                <li><a href="index.html" title="Home Page">Home</a></li>
+                <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
+                <li><a href="contatti.html" title="Candidati inviando un tuo cv">Job</a></li>
             </ul>
         </nav>
 
@@ -35,9 +36,12 @@
     <main>
         <article class="clearfix">
             <h1>Come creare un template per i post </h1>
+            <img id="underl" src="underline.svg" alt="sottolineato" >
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il
                     25-10-2020</span></p>
-            <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70">
+            <aside id="aside1">
+            <img src="badge.png" class="imgLeft" alt="logo Html5" width="70" height="70">
+            </aside>
             <p> La prima cosa
                 da
                 fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da
@@ -58,6 +62,11 @@
                 <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
                 <li>Applicare gli stili CSS</li>
             </ol>
+
+            
+                <a id="icone" href="https://www.facebook.com/"><i class="fa-solid fa-tags"></i></a>
+                <a id="icone1" href="https://www.facebook.com/"><i class="fa-solid fa-ghost"></i></a>
+                <a id="icone2" href="index.html"><i class="fa-solid fa-rocket-launch"></i></a>
 
             <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
 
@@ -109,10 +118,9 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
-            <section>
-                <h2>Novità</h2>
+                <section id="sec">
+                    <h2 id="novi">Novità</h2>
                 <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
-
                 <form method="POST" action="elabora_form.php">
                     <fieldset>
                         <input type="email" name="user_email" id="user_email" placeholder="inserisci l'email" required>
@@ -124,28 +132,28 @@
         </article>
 
         <aside>
-            <h2>Articoli correlati</h2>
-            <div>
+            <h2 >Articoli correlati</h2>
+            <div class="articol">
                 <a href="./post2.html"
                     title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
                     HTML</a>
-                <p><i class="fas fa-tag"></i> Categoria: develop</p>
-                <p><i class="fas fa-calendar-alt"></i> Data: 18-9-2020</p>
+                <p ><i id="font" class="fa-solid fa-tags"></i> Categoria: develop</p>
+                <p><i class="fa-solid fa-calendar-days"></i> Data: 18-9-2020</p>
             </div>
 
-            <div>
+            <div class="articol">
                 <a href="./post3.html"
                     title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la
                     sintassi</a>
-                <p><i class="fas fa-tag"></i> Categoria: develop</p>
-                <p><i class="fas fa-calendar-alt"></i> Data: 16-9-2020</p>
+                <p ><i id="font" class="fa-solid fa-tags"></i> Categoria: develop</p>
+                <p><i class="fa-solid fa-calendar-days"></i> Data: 16-9-2020</p>
             </div>
 
-            <div>
+            <div class="articol">
                 <a href="./post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella
                     pagina</a>
-                <p><i class="fas fa-tag"></i> Categoria: ottimizzazione</p>
-                <p><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</p>
+                <p ><i id="font" class="fa-solid fa-tags"></i></i> Categoria: ottimizzazione</p>
+                <p><i class="fa-solid fa-calendar-days"></i> Data: 30-9-2020</p>
             </div>
         </aside>
     </main>
