--- a/m1/w5/d2/articolo.html
+++ b/m1/w5/d2/articolo.html
@@ -64,9 +64,9 @@
             </ol>
 
             
-                <a id="icone" href="https://www.facebook.com/"><i class="fa-solid fa-tags"></i></a>
+                <a id="icone" href="https://www.facebook.com/"><i class="fa-solid fa-user"></i></a>
                 <a id="icone1" href="https://www.facebook.com/"><i class="fa-solid fa-ghost"></i></a>
-                <a id="icone2" href="index.html"><i class="fa-solid fa-rocket-launch"></i></a>
+                <a id="icone2" href="http://127.0.0.1:5500/w5/d2/articolo.html"><i class="fa-solid fa-house"></i></a>
 
             <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
 
@@ -137,7 +137,7 @@
                 <a href="./post2.html"
                     title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
                     HTML</a>
-                <p ><i id="font" class="fa-solid fa-tags"></i> Categoria: develop</p>
+                <p ><i  class="fa-solid fa-tags"></i> Categoria: develop</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Data: 18-9-2020</p>
             </div>
 
@@ -145,14 +145,14 @@
                 <a href="./post3.html"
                     title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la
                     sintassi</a>
-                <p ><i id="font" class="fa-solid fa-tags"></i> Categoria: develop</p>
+                <p ><i  class="fa-solid fa-tags"></i> Categoria: develop</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Data: 16-9-2020</p>
             </div>
 
             <div class="articol">
                 <a href="./post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella
                     pagina</a>
-                <p ><i id="font" class="fa-solid fa-tags"></i></i> Categoria: ottimizzazione</p>
+                <p ><i  class="fa-solid fa-tags"></i></i> Categoria: ottimizzazione</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Data: 30-9-2020</p>
             </div>
         </aside>
