--- a/m1/w5/d2/articolo.html
+++ b/m1/w5/d2/articolo.html
@@ -64,9 +64,9 @@
             </ol>
 
             
-                <a id="icone" href="https://www.facebook.com/"><i class="fa-solid fa-user"></i></a>
-                <a id="icone1" href="https://www.facebook.com/"><i class="fa-solid fa-ghost"></i></a>
-                <a id="icone2" href="http://127.0.0.1:5500/w5/d2/articolo.html"><i class="fa-solid fa-house"></i></a>
+                <a  href="https://www.facebook.com/"><i class="fa-solid fa-user"></i></a>
+                <a  href="https://www.facebook.com/"><i class="fa-solid fa-ghost"></i></a>
+                <a  href="http://127.0.0.1:5500/w5/d2/articolo.html"><i class="fa-solid fa-house"></i></a>
 
             <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
 
