--- a/m1/Teoria e lezioni/w5d2/float.html
+++ b/m1/Teoria e lezioni/w5d2/float.html
@@ -53,11 +53,12 @@
         }
 
         /*MAIN*/
+        .container{
+            width: 45%;
+        }
         main {
             padding: 15px;
         }
-
-        
         aside{
             float: left;        /*diamo un float perche cosi impostiamo l'aside a sinistra, e il resto degli elementi andranno a mettersi alla destra di questo elemento */
             width: 300px;   /* diamo una larghezza massima da occupare */
