--- a/m1/w6/d1/bootstrap.html
+++ b/m1/w6/d1/bootstrap.html
@@ -122,11 +122,11 @@
       <h2 class="text-center">Esercizio 5</h2>
 
     <div class="row justify-content-center">
-        <div class="col-lg-8  col-xl-8 col-xxl-8 bg-primary border-secondary text-white text-center p-3 row justify-content-center">
-            <div class="col-log-4 col-xl-4 col-xxl-4 g-primary border border-secondary text-white text-center p-3">colonna 1</div>
-            <div class="col-log-4 col-xl-4 col-xxl-4 g-primary border border-secondary text-white text-center p-3">colonna 2</div>
+        <div class="col-lg-8  col-xl-8 col-xxl-8 bg-primary border-secondary text-white  p-3 row justify-content-center">
+            <div class="col-lg-6 col-xl-6 col-xxl-6 g-primary border border-secondary text-white text-center p-3">colonna 1</div>
+            <div class="col-lg-6 col-xl-6 col-xxl-6 g-primary border border-secondary text-white text-center p-3">colonna 2</div>
         </div>
-        <div class="col-lg-4  col-xl-4 col-xxl-4 bg-primary border-secondary text-white text-center p-3 row justify-content-center">
+        <div class="col-lg-4  col-xl-4 col-xxl-4 bg-primary border border-secondary text-white p-3 row justify-content-center">
           One of two columns
         </div>
     </div>
