--- a/m1/w6/d1/bootstrap.html
+++ b/m1/w6/d1/bootstrap.html
@@ -13,13 +13,13 @@
     <h2 class="text-center">Esercizio 1</h2>
 
     <div class="row justify-content-center">
-        <div class="col-md-4 p-3 bg-warning border border-secondary text-white text-center">
-          One of two columns
+        <div class="col-12 col-md-4 p-3 bg-primary border border-secondary text-white text-center">
+          One of twocol-12  columns
         </div>
-        <div class="col-md-4 p-3 bg-warning border border-secondary text-white text-center">
-          One of two columns
+        <div class="col-12 col-md-4 p-3 bg-primary border border-secondary text-white text-center">
+          One of twocol-12  columns
         </div>
-        <div class="col-md-4 p-3 bg-warning border border-secondary text-white text-center">
+        <div class="col-12 col-md-4 p-3 bg-primary border border-secondary text-white text-center">
             one of two columns
         </div>
       </div>
