--- a/m1/w6/d1/bootstrap.html
+++ b/m1/w6/d1/bootstrap.html
@@ -13,26 +13,26 @@
     <h2 class="text-center">Esercizio 1</h2>
 
     <div class="row justify-content-center">
-        <div class="col-12 col-md-4 p-3 bg-primary border border-secondary text-white text-center">
+        <div class=" col-md-4 p-3 bg-primary border border-secondary text-white text-center">
           One of twocol-12  columns
         </div>
-        <div class="col-12 col-md-4 p-3 bg-primary border border-secondary text-white text-center">
+        <div class=" col-md-4 p-3 bg-primary border border-secondary text-white text-center">
           One of twocol-12  columns
         </div>
-        <div class="col-12 col-md-4 p-3 bg-primary border border-secondary text-white text-center">
+        <div class=" col-md-4 p-3 bg-primary border border-secondary text-white text-center">
             one of two columns
         </div>
       </div>
       <h2 class="text-center">Esercizio 2</h2>
 
     <div class="row justify-content-center">
-        <div class="col-12  col-lg-4  bg-warning border border-secondary text-white text-center p-3">
+        <div class="  col-lg-4  bg-warning border border-secondary text-white text-center p-3">
           One of two columns
         </div>
-        <div class="col-12  col-lg-4  bg-warning border border-secondary text-white text-center p-3">
+        <div class="  col-lg-4  bg-warning border border-secondary text-white text-center p-3">
           One of two columns
         </div>
-        <div class="col-12  col-lg-4  bg-warning border border-secondary text-white text-center p-3">
+        <div class="  col-lg-4  bg-warning border border-secondary text-white text-center p-3">
             one of two columns
         </div>
       </div>
@@ -109,24 +109,26 @@
       <h2 class="text-center">Esercizio 4</h2>
 
     <div class="row justify-content-center">
-        <div class="col-lg-3  col-xl-3 col-xxl-3 bg-danger border-secondary text-white text-center p-3">
+        <div class="col-lg-3  col-xl-3 col-xxl-3 bg-danger border border-secondary text-white text-center p-3">
           One of two columns
         </div>
-        <div class="col-lg-6  col-xl-6 col-xxl-6 bg-danger border-secondary text-white text-center p-3">
+        <div class="col-lg-6  col-xl-6 col-xxl-6 bg-danger border border-secondary text-white text-center p-3">
           One of two columns
         </div>
-        <div class="col-lg-3  col-xl-3 col-xxl-3 bg-danger border-secondary text-white text-center p-3">
+        <div class="col-lg-3  col-xl-3 col-xxl-3 bg-danger border border-secondary text-white text-center p-3">
             one of two columns
         </div>
       </div>
       <h2 class="text-center">Esercizio 5</h2>
 
-    <div class="row justify-content-center">
-        <div class="col-lg-8  col-xl-8 col-xxl-8 bg-primary border-secondary text-white  p-3 row justify-content-center">
+    <div class="row">
+        <div class="col-lg-8  col-xl-8 col-xxl-8 bg-primary border-secondary text-white  p-3 ">
+            <div class="row">
             <div class="col-lg-6 col-xl-6 col-xxl-6 g-primary border border-secondary text-white text-center p-3">colonna 1</div>
             <div class="col-lg-6 col-xl-6 col-xxl-6 g-primary border border-secondary text-white text-center p-3">colonna 2</div>
         </div>
-        <div class="col-lg-4  col-xl-4 col-xxl-4 bg-primary border border-secondary text-white p-3 row justify-content-center">
+        </div>
+        <div class="col-lg-4  col-xl-4 col-xxl-4 bg-primary border border-secondary text-white p-3">
           One of two columns
         </div>
     </div>
