--- a/m1/Teoria e lezioni/w6/d2/articoli.html
+++ b/m1/Teoria e lezioni/w6/d2/articoli.html
@@ -60,19 +60,19 @@
 
           <!-- mettiamo degli articoli-->
           <article class="border border-dark shadow p-3">
-            <img src="AurelionSol_1.jpg" class="float-end w-50" alt="img">
+            <img src="AurelionSol_1.jpg" class="float-end " alt="img">
             <p>champ più bello</p>
           </article>
           <article class="border border-dark shadow p-3">
-            <img src="AurelionSol_2.jpg" class="float-start w-50" alt="img">
+            <img src="AurelionSol_2.jpg" class="float-start " alt="img">
             <p>anche lui</p>
           </article>
           <article class="border border-dark shadow p-3">
-            <img src="AurelionSol_1.jpg" class="float-end w-50" alt="img">
+            <img src="AurelionSol_1.jpg" class="float-end " alt="img">
             <p>soprattutto lui</p>
           </article>
           <article class="border border-dark shadow p-3">
-            <img src="AurelionSol_2.jpg" class="float-start w-50" alt="img">
+            <img src="AurelionSol_2.jpg" class="float-start " alt="img">
             <p>ma lui... il piu bello</p>
           </article>
           <!-- fine articoli-->
