--- a/m1/w6/d2/vacanza.html
+++ b/m1/w6/d2/vacanza.html
@@ -219,21 +219,21 @@
             <h3 class="fw-bold text-center">Dicono di Noi</h3>
             <div class="row">
               <div class="col-4 mb-3">
-                <img class="w-75 rounded-circle" src="15l.jpeg">
+                <img class="w-75 rounded-circle img-fluid" src="15l.jpeg">
               </div>
               <div class="col-8 ">
                   <h2>Username</h2>
                   <p>fhgb yuikfgbeuil FGHBDJKS  HBN FGLUIEGHLBVjknsbvjkewgvbjkehsvbm,xnvjkeghjkvn.x,mvbejlhsvjkl.x,bh.eujkdgBVJMNDB Sv,hjegjvsm vnbjewhivdnsmvndmvbòJFHIEJFL,NEM,VNJM,GHERU.klvcdnvm,buieyhròosiHVJKDBNSBHJK</p>
                 </div>
                 <div class="col-4 mb-3">
-                  <img class="w-75 rounded-circle" src="15l.jpeg">
+                  <img class="w-75 rounded-circle img-fluid" src="15l.jpeg">
                 </div>
-                <div class="col-8">
+                <div class="col-8 ">
                     <h2>Username</h2>
                     <p>fhgb yuikfgbeuil FGHBDJKS  HBN FGLUIEGHLBVjknsbvjkewgvbjkehsvbm,xnvjkeghjkvn.x,mvbejlhsvjkl.x,bh.eujkdgBVJMNDB Sv,hjegjvsm vnbjewhivdnsmvndmvbòJFHIEJFL,NEM,VNJM,GHERU.klvcdnvm,buieyhròosiHVJKDBNSBHJK</p>
                   </div>
                   <div class="col-4 mb-3">
-                    <img class="w-75 rounded-circle" src="15l.jpeg">
+                    <img class="w-75 rounded-circle img-fluid" src="15l.jpeg">
                   </div>
                   <div class="col-8">
                       <h2>Username</h2>
