--- a/m1/Teoria e lezioni/w7/d2/json.html
+++ b/m1/Teoria e lezioni/w7/d2/json.html
@@ -18,6 +18,44 @@
                 proprietà: 'valore',
                 proprietà: 'valore'
             }
+            // coppie proprieta:valore separate dalla virgola ad eccezione dell'ultima
+        // l'intero oggetto viene racchiuso tra parentesi {}
+        // a differenza della notazione javascript: dentro a json ci possono solo essere valori semplici (no funzioni, no valori complessi)
+        // stringhe, numeri, array, oggetti, true|false, null 
+        // esempio
+        {
+            "home": "Epicode.it",
+            "link": "https://www.epicode.it",
+            "argomento": "Standard del web",
+            "aree": [
+                {
+                    "area": "CSS",
+                    "url": "https://css.epicode.it"
+                },
+                {
+                    "area": "javascript",
+                    "url": "https://javascript.epicode.it"
+                }
+            ]
+        }
+        // inizia con una coppia di parentesi graffe (che racchiudono tutta la struttura)
+        // seguono le coppie proprieta:valore (che possono contenere valori atomici o altri oggetti attenzione -> [])
+        // json chiede che i valori e le proprietà siano tra ""
+        // per accedere ai valori json .dot notation
+        oggetto.home // Epicode.it
+        oggetto.link // https://www.epicode.it
+        var aree = oggetto.aree // array
+        for(var i = 0; i < aree.length; i += 1){
+         //   
+        }
+        // Json viene usato da javascript tramite ajax.
+        // faccio una richiesta -> viene restituito l'oggetto
+        $.ajax({
+            url: 'json.html',
+            type: 'GET',
+            dataType: 'json',
+            success // ...
+        })
         </script>
 </body>
 </html>
